customized dynamic label selection on video-audio.

--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
               "submit",
               "skip",
               "controls",
-              //"review",
+              // "review",
               "infobar",
               "topbar",
               "instruction",
@@ -117,7 +117,7 @@
               "predictions:menu",
               "auto-annotation",
               "edit-history",
-              //"topbar:prevnext",
+              "topbar:prevnext",
           ],
           user: {
             "id": 1,
